# prj2

CanadianExperienceLib/: Actor.cpp  Actor.h  AnimChannel.cpp  AnimChannel.h  AnimChannelAngle.cpp  AnimChannelAngle.h  AnimChannelPoint.cpp  AnimChannelPoint.h  CMakeLists.txt  Drawable.cpp  Drawable.h  HaroldFactory.cpp  HaroldFactory.h  HeadTop.cpp  HeadTop.h  ImageDrawable.cpp  ImageDrawable.h  MachineDrawable.cpp  MachineDrawable.h  MainFrame.cpp  MainFrame.h  Picture.cpp  Picture.h  PictureFactory.cpp  PictureFactory.h  PictureObserver.cpp  PictureObserver.h  PolyDrawable.cpp  PolyDrawable.h  RotatedBitmap.cpp  RotatedBitmap.h  SpartyFactory.cpp  SpartyFactory.h  Timeline.cpp  Timeline.h  TimelineDlg.cpp  TimelineDlg.h  ViewEdit.cpp  ViewEdit.h  ViewTimeline.cpp  (+2 more)
MachineDemo/: CMakeLists.txt  MachineSystemIsolator.h  README.md  main.cpp  pch.h
MachineLib/: Box.cpp  Box.h  CMakeLists.txt  Cam.h  Component.cpp  Cylinder.cpp  CylinderDemo.h  IKeyDrop.h  Machine.h  Machine1AFactory.h  Machine1Factory.cpp  Machine1Factory.h  MachineDialog.h  MachineStandin.cpp  MachineStandin.h  MachineSystem.cpp  MachineSystemFactory.cpp  MachineSystemFactory.h  Polygon.h  Shaft.h  Sparty.cpp  Sparty.h  pch.h
MachineLib/include/: machine-api.h
MachineLib/resources/songs/: fight.xml  pop.xml
MachineTests/: CMakeLists.txt  MachineTest.cpp
resources/xrc/: main.fbp  main.xrc
